--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,8 @@
 @import './partials/navbarside';
 //title bar
 @import './partials/title';
+//create
+@import './partials/create';
 //login
 @import './partials/login';
 //reset user agent
