--- a/resources/sass/partials/_login.scss
+++ b/resources/sass/partials/_login.scss
@@ -1,7 +1,7 @@
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.login-title,.register-title {
+.login-title,.register-title,.reset-title {
     font-weight: bold;
     text-align: center;
     font-weight: bold;
@@ -11,7 +11,7 @@
 
     padding: 10px 5%;
 }
-.button-login,.button-register{
+.button-login,.button-register,.button-reset{
    padding: 5px 10px !important;
    margin: 5px 10px;
    border-radius: 5px;
@@ -20,6 +20,9 @@
    border: 0px white solid !important;
    cursor:pointer;
    background-color: $color-accent;
+   &:hover{
+    background-color: $color-accent-hover;
+   }
 }
 
 nav {
@@ -49,13 +52,13 @@ nav {
         }
     }
 }
-.login-container,.register-container{
+.login-container,.register-container,.reset-container{
     text-align: center;
 }
 .card{
     .form-control{
         
-        width: 20vw;
+       
         border-radius: 10px ;
         padding: 10px;
         font-size: small;
@@ -76,7 +79,7 @@ nav {
     display: inline-block;
     text-align: center  ;
     padding:50px;
-    margin: 100px 0;
+    margin: 50px 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     background-color: rgb(255, 255, 255);
@@ -89,5 +92,34 @@ nav {
     color: $color-accent;
     font-size: 0.7rem;
     font-weight: light;
+}
+
+
+
+@media screen and (max-width: 480px){
+    .button-login,.button-register{
+        padding: 5px 5px !important;
+        margin: 5px 5px;
+    }
+    .card{
+        .form-control{
+            
+            width:auto;     
+        }
+    }
+    .login-reset-area{
+        display: flex;
+        flex-direction: column  ;
+    }
+}
+@media screen and (min-width: 1024px){
+    .card{
+        .form-control{
+            
+            width: 20vw;
+            
+            
+        }
+    }
 }
 
