--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 8vh;
+    width: 100vw;
     margin-top: 0.5em;
     text-align: center;
-    // height: 2vh;
-    // background-color: white;
 }
+
 .ft-img{
     margin-left: 0.3em;
     margin-right: 0.3em;
