--- a/public/css/app.css
+++ b/public/css/app.css
@@ -184,6 +184,12 @@ ul {
   align-items: center;
 }
 
+.flex-evenly {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .align-center {
   display: flex;
   align-items: center;
@@ -227,6 +233,10 @@ ul {
 .text_decoration_none {
   text-decoration: none;
   color: inherit;
+}
+
+.list-type {
+  list-style-type: none;
 }
 
 .link-hover:hover {
@@ -413,11 +423,117 @@ ul {
 }
 
 .form-create {
-  width: 30vw;
+  width: 45vw;
   padding: 10px;
-  border: 1px solid lightgray;
+  border: 2px solid lightgray;
   border-radius: 10px;
   box-shadow: 5px 5px 10px 0px lightgray;
+}
+
+.price {
+  width: 13vw;
+  padding: 10px;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+}
+
+.description-form {
+  width: 60vw;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.address-form {
+  width: 60vw;
+  border: 2px solid lightgray;
+  box-shadow: 2px 2px 7px 0px lightgray;
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.address-form2 {
+  width: 60vw;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+  padding: 10px;
+  z-index: 1;
+}
+
+.services-form {
+  width: 60vw;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+  padding: 10px;
+}
+
+.services-ul {
+  height: 20vh;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.services-title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: #ff385c;
+  font-weight: bold;
+}
+
+.image-form {
+  width: 60vw;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+  padding: 20px;
+}
+
+.little-forms {
+  width: 10vw;
+  border: 2px solid lightgray;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 0px lightgray;
+  padding: 10px;
+  margin-left: 20px;
+}
+
+.margin-top-forms {
+  padding-top: 30px;
+}
+
+.radio {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.margin-bottom-forms {
+  padding-bottom: 30px;
+}
+
+.custom-margin-create {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.button-send {
+  background-color: #ff385c;
+  padding: 15px;
+  border: 0px;
+  border-radius: 8px;
+  color: white !important;
+  font-size: 15px;
+  font-weight: 600 !important;
+  width: 12vw;
+}
+
+.margin-top-services {
+  padding-top: 15px;
 }
 
 input:focus,
@@ -425,16 +541,71 @@ textarea:focus {
   border: 2px solid #ff385c;
 }
 
+input:focus-visible,
+textarea:focus-visible {
+  outline: none;
+}
+
 .form-create::-moz-placeholder {
   font-weight: bold;
-  opacity: 0.5;
-  color: gray;
+  color: lightgray;
 }
 
 .form-create::placeholder {
   font-weight: bold;
-  opacity: 0.5;
-  color: gray;
+  color: lightgray;
+}
+
+.price::-moz-placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.price::placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.description-form::-moz-placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.description-form::placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.address-form::-moz-placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.address-form::placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.services-form::-moz-placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.services-form::placeholder {
+  font-weight: bold;
+  color: lightgray;
+}
+
+.li-hover:hover {
+  color: #ff385c;
+}
+
+.margin-form {
+  margin-left: 30px;
+}
+
+.direction {
+  flex-direction: column;
 }
 
 .login-title {
