Fix merge branch angelo

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,8 @@
 // Body
 $body-bg: #f8fafc;
 // Typography
-$segoe: 'Segoe UI', sans-serif;
-                                                
+$segoe: "Segoe UI", sans-serif;
+
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 // Colors
@@ -24,7 +24,7 @@ $color-gray-1-hover: #9b9b9b;
 $color-gray-2: #222222;
 $color-gray-2-hover: #000000;
 $color-white: #ffffff;
-$dirty-white: #EEEEEE;
+$dirty-white: #eeeeee;
 $color-white-hover: #dddddd;
 $color-gold: #ffd700;
 $box-shadow: #00000040;
