--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -1,12 +1,12 @@
 *,
 *::after,
-*::before{
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.landpage{
-width: 100vw;
+.landpage {
+    width: 100vw;
 }
 .autocomplete {
     z-index: 10;
@@ -27,35 +27,35 @@ width: 100vw;
             &:last-of-type {
                 border: none;
             }
-            &:hover{
+            &:hover {
                 opacity: 1;
             }
         }
     }
 }
 
-.index-search-bar{
+.index-search-bar {
     position: relative;
 
-    .index-search{
+    .index-search {
         width: 20vw;
         margin-left: 3vw;
         border-radius: 3px;
         box-shadow: 2px 2px 1px gray;
-        border: 0.0 solid gray;
+        border: 0 solid gray;
         margin-bottom: 16px;
         margin-top: 16px;
         padding: 5px 5px 5px 15px;
     }
 
-    .index-q{
+    .index-q {
         position: absolute;
         z-index: 10;
         border-radius: 3px;
         box-shadow: 2px 2px 1px gray;
-        border: 0.0 solid gray;
+        border: 0 solid gray;
         padding: 5px 10px 5px 10px;
-        color:red;
+        color: red;
         top: 15px;
         left: 22vw;
         background-color: white;
@@ -72,7 +72,7 @@ width: 100vw;
         outline: none;
     }
 
-    .index-search-2{
+    .index-search-2 {
         padding: 5px 5px 5px 15px;
         box-shadow: 2px 2px 1px gray;
         margin-left: 0.4%;
@@ -86,33 +86,32 @@ width: 100vw;
     opacity: 0.5;
 }
 
-.index-cards{
-    display:flex;
+.index-cards {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     overflow: auto;
-    height: 80vh;
     width: 100%;
     margin: 0 auto;
     padding: 0px 30px 0px 0%;
 
-    .index-card{
+    .index-card {
         border: 1px solid grey;
         position: relative;
         height: 75vh;
-        width: calc((100%/4) - 72px);
+        width: calc((100% / 4) - 72px);
         margin-left: 36px;
         margin-top: 36px;
         margin-right: 36px;
         border-radius: 20px;
         box-shadow: 2px 2px 1px gray;
 
-        .index-cover-img{
+        .index-cover-img {
             position: relative;
             width: 100%;
 
-            .index-cover-img-l{
+            .index-cover-img-l {
                 position: absolute;
                 top: 90%;
                 left: 3%;
@@ -121,38 +120,38 @@ width: 100vw;
             }
         }
 
-        .index-img-top{
+        .index-img-top {
             width: 100%;
             border-radius: 20px 20px 0px 0px;
         }
 
-        .index-card-text{
+        .index-card-text {
             position: absolute;
             z-index: -10;
             padding: 5%;
             width: 90%;
         }
 
-        .index-card-price{
+        .index-card-price {
             position: absolute;
             top: 90%;
             width: 90%;
             padding: 0px 10px 20px 10px;
 
-            .index-card-title{
+            .index-card-title {
                 font-size: 0.8em;
                 opacity: 0.5;
                 margin-bottom: 3px;
             }
 
-            .index-btn{
+            .index-btn {
                 padding: 5px;
                 color: red;
                 border-radius: 10px;
                 border: 0.2px solid grey;
                 box-shadow: 2px 2px 1px gray;
 
-                &:hover{
+                &:hover {
                     -webkit-box-shadow: 0 0 5px 2px gray;
                     -moz-box-shadow: 0 0 5px 2px gray;
                     box-shadow: 0 0 5px 2px gray;
@@ -161,7 +160,7 @@ width: 100vw;
                     -webkit-border-radius: 5px;
                     -khtml-border-radius: 5px;
                     border-radius: 5px;
-                };
+                }
             }
         }
     }
