--- a/resources/sass/partials/_login.scss
+++ b/resources/sass/partials/_login.scss
@@ -1,28 +1,33 @@
-*{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
-.login-title,.register-title,.reset-title {
+.login-title,
+.register-title,
+.reset-title {
     font-weight: bold;
     text-align: center;
     font-weight: bold;
     padding-bottom: 1rem;
 }
 .container {
-
     padding: 10px 5%;
 }
-.button-login,.button-register,.button-reset{
-   padding: 5px 10px !important;
-   margin: 5px 10px;
-   border-radius: 5px;
-   font-weight: 500;
-   color: white;
-   border: 0px white solid !important;
-   cursor:pointer;
-   background-color: $color-accent;
-   &:hover{
-    background-color: $color-accent-hover;
-   }
+.button-login,
+.button-register,
+.button-reset {
+    padding: 5px 10px !important;
+    margin: 5px 10px;
+    border-radius: 5px;
+    font-weight: 500;
+    color: white;
+    border: 0px white solid !important;
+    cursor: pointer;
+    background-color: $color-accent;
+    &:hover {
+        background-color: $color-accent-hover;
+    }
 }
 
 nav {
@@ -30,7 +35,6 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-       
     }
 
     .navbar-brand {
@@ -41,35 +45,32 @@ nav {
 
     .navbar-options {
         .navbar-nav {
-            a{
+            a {
                 text-decoration: none;
                 padding: 0 10px;
             }
             display: flex;
             list-style-type: none;
-
-
         }
     }
 }
-.login-container,.register-container,.reset-container{
+.login-container,
+.register-container,
+.reset-container {
     text-align: center;
 }
-.card{
-    .form-control{
-        
-       
-        border-radius: 10px ;
+.card {
+    .form-control {
+        border-radius: 10px;
         padding: 10px;
         font-size: small;
         font-weight: bold;
-        
     }
-    .form-group{
-        margin-bottom:1rem;
+    .form-group {
+        margin-bottom: 1rem;
     }
-    .form-check{
-        input{
+    .form-check {
+        input {
             vertical-align: middle;
         }
         font-weight: bold;
@@ -77,16 +78,15 @@ nav {
         margin-bottom: 10px;
     }
     display: inline-block;
-    text-align: center  ;
-    padding:50px;
+    text-align: center;
+    padding: 50px;
     margin: 50px 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
-    
 }
-.invalid-feedback{
+.invalid-feedback {
     display: block;
     text-align: initial;
     color: $color-accent;
@@ -94,32 +94,26 @@ nav {
     font-weight: light;
 }
 
-
-
-@media screen and (max-width: 480px){
-    .button-login,.button-register{
+@media screen and (max-width: 480px) {
+    .button-login,
+    .button-register {
         padding: 5px 5px !important;
         margin: 5px 5px;
     }
-    .card{
-        .form-control{
-            
-            width:auto;     
+    .card {
+        .form-control {
+            width: auto;
         }
     }
-    .login-reset-area{
+    .login-reset-area {
         display: flex;
-        flex-direction: column  ;
+        flex-direction: column;
     }
 }
-@media screen and (min-width: 1024px){
-    .card{
-        .form-control{
-            
+@media screen and (min-width: 1024px) {
+    .card {
+        .form-control {
             width: 20vw;
-            
-            
         }
     }
 }
-
