--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -165,3 +165,9 @@
         }
     }
 }
+.hero {
+    /* background-image: url("../../../public/img/hero.jpg"); */
+    width: fit-content;
+    height: 2%;
+    margin: 0 auto;
+}
