--- a/resources/sass/partials/_create.scss
+++ b/resources/sass/partials/_create.scss
@@ -5,8 +5,8 @@
     border-radius: 30px;
     text-align: center;
     width: 25%;
-    margin-top: 25px;
-    margin-bottom: 50px;
+    margin-top: 35px;
+    margin-bottom: 35px;
 }
 
 .margin-top-forms {
@@ -71,7 +71,7 @@
     margin-left: 20px;
 }
 
-.margin-top-forms {
+.padding-top-forms {
     padding-top: 30px;
 }
 
@@ -100,6 +100,14 @@
     width: 12vw;
 }
 
+.select-form-visible {
+    padding: 5px;
+    border: 1px solid $color-accent;
+    background-color: white;
+    color: $color-accent;
+    border-radius: 10px;
+}
+
 .margin-top-services {
     padding-top: 15px;
 }
@@ -109,7 +117,8 @@
 }
 
 input,
-textarea {
+textarea,
+select {
     &:focus {
         border: 2px solid $color-accent;
     }
