--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,8 @@
 @import './partials/title';
 //create
 @import './partials/create';
+//edit
+@import './partials/edit';
 //login
 @import "./partials/login";
 // Card singolo appartamento
