--- a/resources/sass/partials/_navbarside.scss
+++ b/resources/sass/partials/_navbarside.scss
@@ -7,7 +7,7 @@
         color: $color-gray-2;
         margin-bottom: 15px;
     }
-    .navbar-li::hover {
+    .navbar-li:hover {
         color: $color-accent;
     }
 }
