--- a/resources/sass/partials/_create.scss
+++ b/resources/sass/partials/_create.scss
@@ -116,6 +116,13 @@
     margin-top: 15px;
 }
 
+.margin-little-forms-label {
+    color: $color-accent;
+    margin-left: 22px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
 input,
 textarea,
 select {
