show,edit,create, dashboard,appartamenti completi

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,8 @@
 @import './partials/create';
 //edit
 @import './partials/edit';
+//show
+@import './partials/showlogged';
 //login
 @import "./partials/login";
 // Card singolo appartamento
