--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -33,6 +33,14 @@
     text-align: center;
 }
 
+.relative {
+    position: relative;
+}
+
+.block {
+    display: block;
+}
+
 .button_accent {
     background-color: $color-accent;
     padding: 10px;
