Paggina fatta + responsive

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,8 @@
 @import "./partials/singleapartment";
 // footer
 @import "./partials/footer";
+//Advanced search
+@import "./partials/advancedsearch";
 //reset user agent
 * {
     margin: 0;
