--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -32,7 +32,6 @@
 }
 
 .index-search-bar {
-    position: relative;
 
     .index-search {
         width: 20vw;
@@ -45,38 +44,6 @@
         padding: 5px 5px 5px 15px;
     }
 
-    .index-q {
-        position: absolute;
-        z-index: 10;
-        border-radius: 3px;
-        box-shadow: 2px 2px 1px gray;
-        border: 0 solid gray;
-        padding: 5px 10px 5px 10px;
-        color: red;
-        top: 15px;
-        left: 22vw;
-        background-color: white;
-
-        -webkit-box-shadow: 0 0 5px 2px gray;
-        -moz-box-shadow: 0 0 5px 2px gray;
-        box-shadow: 0 0 5px 2px gray;
-        border: 1px solid gray;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -khtml-border-radius: 5px;
-        border-radius: 5px;
-
-        outline: none;
-    }
-
-    .index-search-2 {
-        padding: 5px 5px 5px 15px;
-        box-shadow: 2px 2px 1px gray;
-        margin-left: 0.4%;
-        border-radius: 3px;
-        text-decoration: none;
-        color: black;
-    }
 }
 
 .opacity {
@@ -86,18 +53,18 @@
 .index-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
-    overflow: auto;
     width: 100%;
     margin: 0 auto;
     padding: 0px 30px 0px 0%;
 
     .index-card {
         border: 1px solid grey;
-        position: relative;
-        height: 75vh;
+        // position: relative;
+        height: 700px;
         width: calc((100% / 4) - 72px);
+        // width: 20%;
         margin-left: 36px;
         margin-top: 36px;
         margin-right: 36px;
@@ -105,15 +72,15 @@
         box-shadow: 2px 2px 1px gray;
 
         .index-cover-img {
-            position: relative;
             width: 100%;
-
+            position: relative;
             .index-cover-img-l {
                 position: absolute;
-                top: 90%;
+                bottom: 10%;
                 left: 3%;
                 z-index: 10;
-                color: white;
+                // color: white;
+                color: red;
             }
         }
 
@@ -123,14 +90,14 @@
         }
 
         .index-card-text {
-            position: absolute;
+            // position: absolute;
             z-index: -10;
             padding: 5%;
             width: 90%;
         }
 
         .index-card-price {
-            position: absolute;
+            // position: absolute;
             top: 90%;
             width: 90%;
             padding: 0px 10px 20px 10px;
@@ -138,7 +105,7 @@
             .index-card-title {
                 font-size: 0.8em;
                 opacity: 0.5;
-                margin-bottom: 3px;
+                margin-bottom: 16px;
             }
 
             .index-btn {
@@ -147,6 +114,7 @@
                 border-radius: 10px;
                 border: 0.2px solid grey;
                 box-shadow: 2px 2px 1px gray;
+                margin-top: 16px;
 
                 &:hover {
                     -webkit-box-shadow: 0 0 5px 2px gray;
@@ -163,10 +131,27 @@
     }
 }
 .hero {
-    /* background-image: url("../../../public/img/hero.jpg"); */
     width: 100%;
     margin: 0 auto;
+
     img {
         width: 100%;
     }
 }
+// table
+@media screen and (max-width: 768px)
+{
+    .index-card {
+    //   background-color: red;
+      font-size: 0.5em;
+      max-height: 400px;
+      width: 50%;
+    }
+
+    .index-cover-img-l {
+        color: blue !important;
+        // top: 30%;
+    }
+
+  }
+
