--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -58,9 +58,11 @@
     padding: 0px 30px 0px 0%;
 
     .index-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         border: 1px solid grey;
-        // position: relative;
-        height: 700px;
+        height: 750px;
         width: calc((100% / 4) - 72px);
         margin-left: 36px;
         margin-top: 36px;
@@ -71,13 +73,24 @@
         .index-cover-img {
             width: 100%;
             position: relative;
+
             .index-cover-img-l {
                 position: absolute;
                 bottom: 10%;
                 left: 3%;
                 z-index: 10;
-                // color: white;
-                color: red;
+                color: white;
+            }
+
+            .index-sponsor{
+                position: absolute;
+                bottom: 90%;
+                left: 7%;
+                z-index: 10;
+                color: white;
+                padding: 5px;
+                border: 1px solid white;
+                border-radius: 10px;
             }
         }
 
@@ -87,14 +100,12 @@
         }
 
         .index-card-text {
-            // position: absolute;
             z-index: -10;
             padding: 5%;
             width: 90%;
         }
 
         .index-card-price {
-            // position: absolute;
             top: 90%;
             width: 90%;
             padding: 0px 10px 20px 10px;
@@ -127,26 +138,123 @@
         }
     }
 }
-.hero {
-    width: 100%;
-    margin: 0 auto;
 
-    img {
-        width: 100%;
-    }
-}
+// .hero {
+//     width: 100%;
+//     margin: 0 auto;
+
+//     img {
+//         width: 100%;
+//     }
+// }
+
 // table
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1440px) {
     .index-cards {
         .index-card {
             //   background-color: red;
             font-size: 0.5em;
             max-height: 400px;
-            width: calc((50% - 72px));
         }
     }
-    .index-cover-img-l {
-        color: blue !important;
-        // top: 30%;
+}
+
+@media screen and (max-width: 1024px) {
+    .index-cards {
+        .index-card {
+            //   background-color: red;
+            font-size: 0.5em;
+            max-height: 300px;
+
+            .index-cover-img{
+
+                .index-sponsor{
+                    bottom: 85%;
+                }
+            }
+        }
+
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .index-cards {
+        .index-card {
+            //   background-color: red;
+            font-size: 0.5em;
+            max-height: 450px;
+            width: calc((50% - 72px));
+
+            .index-cover-img{
+
+                .index-sponsor{
+                    bottom: 90%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .index-cards {
+        .index-card {
+            font-size: 0.5em;
+            max-height: 450px;
+            width: 80%;
+
+            .index-cover-img{
+
+                .index-sponsor{
+                    bottom: 85%;
+                }
+            }
+        }
+    }
+
+    .sign{
+        font-size: 0.7em;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .index-cards {
+        .index-card {
+            font-size: 0.5em;
+            max-height: 400px;
+            width: 80%;
+
+            .index-cover-img{
+
+                .index-sponsor{
+                    bottom: 85%;
+                }
+            }
+        }
+    }
+
+    .sign{
+        font-size: 0.5em;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .index-cards {
+        .index-card {
+            font-size: 0.5em;
+            max-height: 350px;
+            width: 80%;
+
+            .index-cover-img{
+
+                .index-sponsor{
+                    bottom: 85%;
+                }
+            }
+        }
+    }
+
+    .sign{
+        font-size: 0.5em;
     }
 }
